--- a/artical/art_cate.html
+++ b/artical/art_cate.html
@@ -2,55 +2,57 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
-    <link rel="stylesheet" href="/assets/css/artical/art_cate.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
+  <link rel="stylesheet" href="/assets/css/artical/art_cate.css" />
 </head>
 
 <body>
-    <!-- 卡片-->
-    <div class="layui-card">
-        <div class="layui-card-header">
-            <span>文章类别管理</span>
-            <button type="button" class="layui-btn layui-btn-normal layui-btn-sm" id="btnAddCate">添加类别</button>
-        </div>
-        <div class="layui-card-body">
-            <table class="layui-table">
-                <colgroup>
-                    <col />
-                    <col />
-                    <col width="200" />
-                </colgroup>
-                <thead>
-                    <tr>
-                        <th>分类名称</th>
-                        <th>分类别名</th>
-                        <th>操作</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </div>
+  <!-- 卡片-->
+  <div class="layui-card">
+    <div class="layui-card-header">
+      <span>文章类别管理</span>
+      <button type="button" class="layui-btn layui-btn-normal layui-btn-sm" id="btnAddCate">添加类别</button>
     </div>
+    <div class="layui-card-body">
+      <table class="layui-table">
+        <colgroup>
+          <col />
+          <col />
+          <col width="200" />
+        </colgroup>
+        <thead>
+          <tr>
+            <th>分类名称</th>
+            <th>分类别名</th>
+            <th>操作</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+  </div>
 
-    <!-- 表格数据的模板 -->
-    <script type="text/html" id="tpl-table">
+  <!-- 表格数据的模板 -->
+  <script type="text/html" id="tpl-table">
+<!-- 模板引擎 循环 -->
       {{each data}}
-      <tr>
-        <td>{{$value.name}}</td>
-        <td>{{$value.alias}}</td>
-        <td>
-          <button type="button" class="layui-btn layui-btn-xs btn-edit" data-id="{{$value.Id}}">编辑</button>
-          <button type="button" class="layui-btn layui-btn-danger layui-btn-xs btn-delete" data-id="{{$value.Id}}">删除</button>
-        </td>
-      </tr>
-      {{/each}}
-    </script>
+  <tr>
+    <td>{{$value.name}}</td>
+    <td>{{$value.alias}}</td>
+    <td>
+      <button type="button" class="layui-btn layui-btn-xs btn-edit" data-id="{{$value.Id}}">编辑</button>
+      <button type="button" class="layui-btn layui-btn-danger layui-btn-xs btn-delete"
+        data-id="{{$value.Id}}">删除</button>
+    </td>
+  </tr>
+  {{/each}}
+  </script>
 
-    <!-- 添加分类的弹出层 -->
-    <script type="text/html" id="dialog-add">
+  <!-- 添加弹出层 -->
+  <script type="text/html" id="dialog-add">
       <form class="layui-form" id="form-add">
         <div class="layui-form-item">
           <label class="layui-form-label">分类名称</label>
@@ -73,8 +75,8 @@
       </form>
     </script>
 
-    <!-- 修改分类的弹出层 -->
-    <script type="text/html" id="dialog-edit">
+  <!-- 修改分类的弹出层 -->
+  <script type="text/html" id="dialog-edit">
       <form class="layui-form" id="form-edit" lay-filter="form-edit">
         <!-- 隐藏域，保存 Id 的值 -->
         <input type="hidden" name="Id">
@@ -99,11 +101,11 @@
     </script>
 
 
-    <script src="/assets/lib/layui/layui.all.js"></script>
-    <script src="/assets/lib/jquery.js"></script>
-    <script src="/assets/js/baseAPI.js"></script>
-    <script src="/assets/lib/template-web.js"></script>
-    <script src="/assets/js/artical/art_cate.js"></script>
+  <script src="/assets/lib/layui/layui.all.js"></script>
+  <script src="/assets/lib/jquery.js"></script>
+  <script src="/assets/js/baseAPI.js"></script>
+  <script src="/assets/lib/template-web.js"></script>
+  <script src="/assets/js/artical/art_cate.js"></script>
 </body>
 
 </html>
