--- a/index.html
+++ b/index.html
@@ -26,13 +26,22 @@
                     </a>
                     <dl class="layui-nav-child">
                         <dd>
-                            <a href="">基本资料</a>
+                            <a href="./user/user_info.html" target="fm">
+                                <i class="layui-icon layui-icon-app"></i>
+                                基本资料
+                            </a>
                         </dd>
                         <dd>
-                            <a href="">更换头像</a>
+                            <a href="./user/user_avatar.html" target="fm">
+                                <i class="layui-icon layui-icon-app"></i>
+                                更换头像
+                            </a>
                         </dd>
                         <dd>
-                            <a href="">重置密码</a>
+                            <a href="./user/user_pwd.html" target="fm">
+                                <i class="layui-icon layui-icon-app"></i>
+                                重置密码
+                            </a>
                         </dd>
                     </dl>
                 </li>
@@ -75,13 +84,13 @@
                                 </a>
                             </dd>
                             <dd>
-                                <a href="javascript:;">
+                                <a href="./artical/art_list.html" target="fm">
                                     <i class="layui-icon layui-icon-app"></i>
                                     文章列表
                                 </a>
                             </dd>
                             <dd>
-                                <a href="javascript:;">
+                                <a href="./artical/art_pub.html" target="fm">
                                     <i class="layui-icon layui-icon-app"></i>
                                     发布文章
                                 </a>
